# OptiCue

./: .gitignore  README.md  git-libs.sh  systemp
PiDev/: git-libs.sh
PiDev/tests/ButtonManager/: CMakeLists.txt
PiDev/tests/ButtonManager/src/: manager.c
PiDev/tests/Sample/: CMakeLists.txt  build.sh  clean.sh
PiDev/tools/: toolchain-rpi-cpp.cmake  toolchain-rpi.cmake
projects/ButtonManager/: CMakeLists.txt
projects/ButtonManager/include/: battery.h  global.h  gpio.h  power.h  proc.h  syswrap.h  volume.h
projects/ButtonManager/src/: battery.c  gpio.c  manager.c  power.c  proc.c  syswrap.c  volume.c
projects/Sample/: CMakeLists.txt  build.sh
tests/ButtonManager/: CMakeLists.txt
tests/Sample/: CMakeLists.txt  build.sh
tests/Sample/src/: blink.c
tools/: toolchain-rpi-cpp.cmake  toolchain-rpi.cmake
